--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <div id="graph-container"></div>
-  <script src="script.js"></script>
+  <div id="vehicle-counter">Vehículos en salida: 0</div>
+  <div id="vehicles-in-system">Vehículos en la red: 0</div>  
+  <script type="module" src="main.js"></script>
 </body>
 </html>
