mejore un poco el codigo. Agregue colas (iogual hay un bug que resolver), complejice el arbol

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
   <div id="graph-container"></div>
-  <div id="vehicle-counter">Vehículos en salida: 0</div>
-  <div id="vehicles-in-system">Vehículos en la red: 0</div>  
+  <div id="counters">
+    <div id="vehicle-counter">Vehículos en salida: 0</div>
+    <div id="vehicles-in-system">Vehículos en la red: 0</div>  
+  </div>
   <script type="module" src="main.js"></script>
 </body>
 </html>
